# coreHTTP

./: CMakeLists.txt
source/: core_http_client.c
source/include/: core_http_client_private.h
